--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,36 @@
+/* orbitron-regular - latin */
+@font-face {
+    font-family: 'Orbitron';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('../fonts/orbitron-v16-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/orbitron-v16-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* raleway-regular - latin */
+@font-face {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/raleway-v17-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/raleway-v17-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/raleway-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/raleway-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/raleway-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/raleway-v17-latin-regular.svg#Raleway') format('svg'); /* Legacy iOS */
+}
+
 *{
-    background-color: rgb(240, 233, 233);
+    font-family: 'Raleway';
+}
+
+/* Font Helpers */
+.orbitron{
+    font-family: 'Orbitron';
+}
+
+.raleway{
+    font-family: 'Raleway';
 }
